<resources>
    <string name="view_loading_text">加载中…</string>
    <string name="app_name">sharedBrain</string>
    <string name="register">注册</string>
    <string name="Tester_account">测试者账号</string>
    <string name="Test_Date">2020_02_11 11:13:17</string>
    <string name="NoMore">没有更多内容</string>
    <string name="Test_content">测试通知内容</string>
    <string name="Test_praise">赞 34</string>
    <string name="Separator">|</string>
    <string name="Test_comment">评论 50</string>
    <string name="description">订单</string>
    <string name="send_back_right">\ue628</string>
    <string-array name="release">
        <item>照片</item>
        <item>小视频</item>
    </string-array>
    <string name="Adress_mine">湖北省武汉市武汉大学</string>

    <!-- 箭头 -->
    <string name="text_arrow_down">\ue64b</string>
    <string name="text_arrow_up">\ue64a</string>
    <string name="text_arrow_right">\ue64c</string>
    <string name="text_arrow_left">\ue64d</string>

    <!--设置页新图标-->
    <string name="mine_data">\ue621</string><!--设置 成长档案-->
    <string name="mine_my_room">\ue61a</string><!--设置 爱心回忆-->
    <string name="mine_server">\ue90f</string><!--设置 爱心问问-->
    <string name="mine_my_baby">\ue606</string><!--设置 我的宝贝-->
    <string name="l4">\ue628</string><!--设置 创建班级-->
    <string name="l4_p">\ue601</string><!--设置 查找班级-->
    <string name="mine_setting">\ue617</string><!--设置 设置-->
    <string name="mine_about">\ue640</string><!--关于我们-->
    <string name="Saysth">说点什么吧...</string>
    <string name="todo">TODO</string>



</resources>

